Fixed whitespace

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -151,6 +151,7 @@ html, body {
 	float: left;
 	text-overflow: ellipsis;
 	overflow: hidden;
+	white-space: nowrap;
 }
 
 .thumb {
